--- a/demo/baidu-ife-task/task_2_20/index.html
+++ b/demo/baidu-ife-task/task_2_20/index.html
@@ -14,16 +14,22 @@
             background-color: red;
             color: #fff;
         }
+
+        .search-result {
+            background-color: green !important;
+        }
     </style>
 </head>
 
 <body>
     <div id="wrap">
-        <input id="input" type="text">
+        <textarea id="add-input" cols="30" rows="5"></textarea>
         <button id="left-in" class="opt in">左侧入</button>
         <button id="right-in" class="opt in">右侧入</button>
         <button id="left-out" class="opt out">左侧出</button>
         <button id="right-out" class="opt out">右侧出</button>
+        <input id="search-input" type="text">
+        <button id="search-btn" class="opt search">搜索</button>
         <div id="queue-wrap">
 
         </div>
