--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
           <p>基于 Delaunay 三角剖分的低多边形生成器，探索 Canvas 与色彩的更多可能性。</p>
           <span class="link">立即体验 →</span>
         </a>
+        <a class="card" href="demo/ctc/index.html">
+          <h3>封闭类时曲线实验室</h3>
+          <p>用可视化的时空图演示广义相对论中的封闭类时曲线，透过交互感受时间扭曲。</p>
+          <span class="link">探索时间循环 →</span>
+        </a>
         <a class="card" href="demo/baidu-ife-task/task_1_06/index.html">
           <h3>Baidu IFE 系列</h3>
           <p>IFE 训练营阶段性作品集，涵盖布局、交互与组件练习，是成长路上的重要脚印。</p>
