Add closed timelike curve convex optimization demo

--- a/index.html
+++ b/index.html
@@ -73,6 +73,11 @@
           <p>用可视化的时空图演示广义相对论中的封闭类时曲线，透过交互感受时间扭曲。</p>
           <span class="link">探索时间循环 →</span>
         </a>
+        <a class="card" href="demo/ctc-optimizer/index.html">
+          <h3>CTC 凸优化实验</h3>
+          <p>在保持因果约束的前提下对封闭类时曲线做凸优化，观察世界线如何趋于平滑且遵守光速边界。</p>
+          <span class="link">调参收敛 →</span>
+        </a>
         <a class="card" href="demo/baidu-ife-task/task_1_06/index.html">
           <h3>Baidu IFE 系列</h3>
           <p>IFE 训练营阶段性作品集，涵盖布局、交互与组件练习，是成长路上的重要脚印。</p>
