Add neutrino catalysis demo

--- a/index.html
+++ b/index.html
@@ -78,6 +78,11 @@
           <p>在保持因果约束的前提下对封闭类时曲线做凸优化，观察世界线如何趋于平滑且遵守光速边界。</p>
           <span class="link">调参收敛 →</span>
         </a>
+        <a class="card" href="demo/neutrino-catalysis/index.html">
+          <h3>巨子与微子反应室</h3>
+          <p>构建巨子、微子与中微子的假想模型，通过滑杆观察中微子催化下的能量振荡与相态转化。</p>
+          <span class="link">进入实验 →</span>
+        </a>
         <a class="card" href="demo/baidu-ife-task/task_1_06/index.html">
           <h3>Baidu IFE 系列</h3>
           <p>IFE 训练营阶段性作品集，涵盖布局、交互与组件练习，是成长路上的重要脚印。</p>
