--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
           <p>基于 Delaunay 三角剖分的低多边形生成器，探索 Canvas 与色彩的更多可能性。</p>
           <span class="link">立即体验 →</span>
         </a>
+        <a class="card" href="demo/game-of-life/eater-catalysis/index.html">
+          <h3>生命游戏：吸子催化</h3>
+          <p>模拟滑翔子（引子）与吸子之间的经典催化反应，观察吸子如何重复吞噬来袭引子。</p>
+          <span class="link">观看反应 →</span>
+        </a>
         <a class="card" href="demo/ctc/index.html">
           <h3>封闭类时曲线实验室</h3>
           <p>用可视化的时空图演示广义相对论中的封闭类时曲线，透过交互感受时间扭曲。</p>
