Add Yuko and Bingzi resonance demo

--- a/index.html
+++ b/index.html
@@ -88,6 +88,11 @@
           <p>构建巨子、微子与中微子的假想模型，通过滑杆观察中微子催化下的能量振荡与相态转化。</p>
           <span class="link">进入实验 →</span>
         </a>
+        <a class="card" href="demo/yuko-bingzi-resonance/index.html">
+          <h3>悠子与冰子共振实验</h3>
+          <p>用双耦合谐振模型描绘两人情绪的能量交换，调节参数让她们逐渐走向同频。</p>
+          <span class="link">感受共振 →</span>
+        </a>
         <a class="card" href="demo/baidu-ife-task/task_1_06/index.html">
           <h3>Baidu IFE 系列</h3>
           <p>IFE 训练营阶段性作品集，涵盖布局、交互与组件练习，是成长路上的重要脚印。</p>
