Add B子与P子联动工作室 demo

--- a/index.html
+++ b/index.html
@@ -88,6 +88,11 @@
           <p>构建巨子、微子与中微子的假想模型，通过滑杆观察中微子催化下的能量振荡与相态转化。</p>
           <span class="link">进入实验 →</span>
         </a>
+        <a class="card" href="demo/bchan-pchan-synchrony/index.html">
+          <h3>B子与P子联动工作室</h3>
+          <p>把两位站娘视作耦合振子，调参观测她们的节奏如何从独立舞动逐渐走向灵感同频。</p>
+          <span class="link">启动联动 →</span>
+        </a>
         <a class="card" href="demo/yuko-bingzi-resonance/index.html">
           <h3>悠子与冰子共振实验</h3>
           <p>用双耦合谐振模型描绘两人情绪的能量交换，调节参数让她们逐渐走向同频。</p>
