Add time crystal resonance demo

--- a/index.html
+++ b/index.html
@@ -83,6 +83,11 @@
           <p>在保持因果约束的前提下对封闭类时曲线做凸优化，观察世界线如何趋于平滑且遵守光速边界。</p>
           <span class="link">调参收敛 →</span>
         </a>
+        <a class="card" href="demo/time-crystal/index.html">
+          <h3>时间晶体共振舱</h3>
+          <p>调节驱动、对称破缺与耗散，观看时间晶体在离散时间对称下如何自发锁模与周期跳跃。</p>
+          <span class="link">捕捉节拍 →</span>
+        </a>
         <a class="card" href="demo/neutrino-catalysis/index.html">
           <h3>巨子与微子反应室</h3>
           <p>构建巨子、微子与中微子的假想模型，通过滑杆观察中微子催化下的能量振荡与相态转化。</p>
