Add triangular lattice Game of Life demo

--- a/index.html
+++ b/index.html
@@ -73,6 +73,11 @@
           <p>模拟滑翔子（引子）与吸子之间的经典催化反应，观察吸子如何重复吞噬来袭引子。</p>
           <span class="link">观看反应 →</span>
         </a>
+        <a class="card" href="demo/game-of-life/triangular/index.html">
+          <h3>生命游戏：三角晶格</h3>
+          <p>把生命游戏搬到等边三角晶格，体验更稠密邻域下的波纹、织纹与流体般演化。</p>
+          <span class="link">开启演化 →</span>
+        </a>
         <a class="card" href="demo/ctc/index.html">
           <h3>封闭类时曲线实验室</h3>
           <p>用可视化的时空图演示广义相对论中的封闭类时曲线，透过交互感受时间扭曲。</p>
