Add 3D and spherical Game of Life demos

--- a/index.html
+++ b/index.html
@@ -73,6 +73,16 @@
           <p>模拟滑翔子（引子）与吸子之间的经典催化反应，观察吸子如何重复吞噬来袭引子。</p>
           <span class="link">观看反应 →</span>
         </a>
+        <a class="card" href="demo/game-of-life/3d-life/index.html">
+          <h3>生命游戏：三维宇宙</h3>
+          <p>把生命游戏扩展到 16³ 的立方空间，遵循 B5/S45 规则，观察三维结构的自组织与崩解。</p>
+          <span class="link">进入宇宙 →</span>
+        </a>
+        <a class="card" href="demo/game-of-life/non-euclidean/index.html">
+          <h3>生命游戏：球面拓扑</h3>
+          <p>在球面上用测地距离定义邻域，探索非欧几何曲面上的生命波前如何缠绕、汇聚与传播。</p>
+          <span class="link">登上星球 →</span>
+        </a>
         <a class="card" href="demo/ctc/index.html">
           <h3>封闭类时曲线实验室</h3>
           <p>用可视化的时空图演示广义相对论中的封闭类时曲线，透过交互感受时间扭曲。</p>
