Add singularity life simulation demo

--- a/index.html
+++ b/index.html
@@ -73,6 +73,11 @@
           <p>模拟滑翔子（引子）与吸子之间的经典催化反应，观察吸子如何重复吞噬来袭引子。</p>
           <span class="link">观看反应 →</span>
         </a>
+        <a class="card" href="demo/singularity-life/index.html">
+          <h3>奇点生命场</h3>
+          <p>在生命游戏的规则上引入引力奇点，体验弯曲邻域下分形生命的诞生与湮灭。</p>
+          <span class="link">唤醒奇点 →</span>
+        </a>
         <a class="card" href="demo/ctc/index.html">
           <h3>封闭类时曲线实验室</h3>
           <p>用可视化的时空图演示广义相对论中的封闭类时曲线，透过交互感受时间扭曲。</p>
