Transform homepage into job-ready resume

--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
     <nav class="site-nav">
       <a href="#top" class="logo">miuchan.github.io</a>
       <div class="nav-links">
-        <a href="#about">关于</a>
+        <a href="#about">价值主张</a>
+        <a href="#experience">经历</a>
+        <a href="#skills">专长</a>
         <a href="#projects">作品</a>
-        <a href="#writing">写作</a>
+        <a href="#writing">亮点</a>
         <a href="#contact">联系</a>
       </div>
     </nav>
@@ -26,40 +28,40 @@
     <main id="main-content">
       <section class="hero" id="top" aria-labelledby="hero-title">
         <div class="hero-content">
-          <span class="eyebrow">前端体验设计师 · Creative Coder</span>
-          <h1 id="hero-title">让界面更柔软，也更有生命力。</h1>
-          <p class="hero-lede">我是康嘉琦（Miuchan）。我喜欢把想法拆成清晰的信息结构，再用流畅的交互和细腻的视觉让它们发光。无论是实验性的可视化，还是长期维护的产品体验，我都愿意把工程与叙事编织在一起。</p>
+          <span class="eyebrow">Metaverse Experience Architect · 全栈前端设计</span>
+          <h1 id="hero-title">把下一代沉浸式世界的体验在此展开。</h1>
+          <p class="hero-lede">我是康嘉琦（Miuchan）。我将系统化的产品策略、跨端前端工程与叙事驱动的体验设计结合在一起，帮助团队在 0→1 到 1→N 的阶段稳定交付。现在正在寻找能够共建元宇宙与下一代互联网体验的合作机会。</p>
           <ul class="hero-highlights" role="list">
             <li>
-              <span class="highlight-label">正在研究</span>
-              <span class="highlight-value">无障碍体验</span>
+              <span class="highlight-label">即刻可用</span>
+              <span class="highlight-value">深圳 / 远程混合 · 可赴海外项目</span>
             </li>
             <li>
-              <span class="highlight-label">热爱</span>
-              <span class="highlight-value">Creative Coding &amp; Web Audio</span>
+              <span class="highlight-label">核心优势</span>
+              <span class="highlight-value">XR 叙事体验 · 低延迟前端 · 多模态协作</span>
             </li>
             <li>
-              <span class="highlight-label">想聊</span>
-              <span class="highlight-value">温柔的协作流程</span>
+              <span class="highlight-label">正在寻找</span>
+              <span class="highlight-value">Web3 / 元宇宙体验团队</span>
             </li>
           </ul>
           <div class="hero-actions">
-            <a class="button primary" href="resume/index.html">查看简历</a>
-            <a class="button secondary" href="blog/index.html">阅读博客</a>
-            <a class="button ghost" href="#projects">看看作品</a>
+            <a class="button primary" href="mailto:hello@miuchan.studio?subject=%E6%B1%82%E8%81%98%E5%90%88%E4%BD%9C%E5%9F%BA%E4%BA%8E%E7%BD%91%E9%A1%B5%E7%BB%8F%E9%AA%8C">预约面谈</a>
+            <a class="button secondary" href="resume/index.html">查看完整简历</a>
+            <a class="button ghost" href="#projects">浏览项目</a>
           </div>
           <dl class="hero-stats">
             <div class="hero-stat">
-              <dt>沉浸式交互实验</dt>
-              <dd>10+</dd>
+              <dt>端到端体验发布</dt>
+              <dd>14 次</dd>
             </div>
             <div class="hero-stat">
-              <dt>前端与体验设计经验</dt>
-              <dd>7 年</dd>
+              <dt>XR / 3D 沉浸式项目</dt>
+              <dd>6 个</dd>
             </div>
             <div class="hero-stat">
-              <dt>记录成长与灵感</dt>
-              <dd>持续</dd>
+              <dt>跨职能团队规模</dt>
+              <dd>8 – 12 人</dd>
             </div>
           </dl>
         </div>
@@ -77,50 +79,166 @@
       <section class="section bright" id="about">
         <div class="section-header">
           <div>
-            <span class="eyebrow">关于我</span>
-            <h2>把工程与情感一起打磨</h2>
+            <span class="eyebrow">Value Proposition</span>
+            <h2>用产品思维把元宇宙的故事落成可交付体验</h2>
           </div>
-          <p class="section-intro">我相信好的体验来自扎实的代码与真诚的叙事。拆解复杂需求、整理信息架构、设计可持续的组件体系，是我每天的日常。与此同时，也不断记录那些让我动心的瞬间。</p>
+          <p class="section-intro">我擅长把抽象的愿景拆解成可信赖的路线图：梳理业务目标、建立跨学科共识、设计沉浸式叙事，再用高性能的工程方案快速迭代。目标是在最短时间帮助团队找到产品市场契合与用户共鸣。</p>
         </div>
         <div class="about-grid">
           <article class="story-card">
-            <h3>从“可用”到“可感”</h3>
-            <p>我在 C 端与 B 端产品里穿梭过，也乐于做一些偏艺术的视觉实验。无论形式如何变化，我最在意的是如何让人们真正感受到界面的节奏与温度。</p>
-            <p>我会从用户的目标与语境出发，把流程梳理清晰，再用细致的动效、响应式排版与语义化代码，让体验轻盈而稳固。</p>
+            <h3>从概念验证到规模化上线的全链路负责人</h3>
+            <p>我在 XR 产品、数字孪生城市与跨平台协作工具中担任过体验负责人，主导需求分析、叙事设计、动效系统、可视化与前端架构。</p>
+            <p>通过连续的双轨制迭代、指标驱动的体验优化与无障碍设计基线，帮助团队将创意快速转化为稳定上线的产品。</p>
           </article>
           <div class="mini-cards">
             <article class="mini-card">
-              <h4>关注的议题</h4>
+              <h4>领导力与协作</h4>
               <ul>
-                <li>Accessible &amp; Inclusive Design</li>
-                <li>性能与感知速度的平衡</li>
-                <li>多人协作中的知识沉淀</li>
+                <li>建立跨职能的决策剧本与同步节奏</li>
+                <li>定义 KPI / OKR，将体验指标绑定业务结果</li>
+                <li>推动设计系统落地，保障多端一致性</li>
               </ul>
             </article>
             <article class="mini-card">
-              <h4>创作的形态</h4>
+              <h4>方法论工具箱</h4>
               <ul>
-                <li>Creative Coding 交互实验</li>
-                <li>Web Audio 与视觉共鸣</li>
-                <li>读书笔记与工作方法论</li>
+                <li>沉浸式叙事地图与多维角色旅程</li>
+                <li>WebGL / Three.js / Unity WebGPU 混合栈</li>
+                <li>设计运营：设计冲刺、设计评审、知识库</li>
               </ul>
             </article>
             <article class="mini-card highlight">
-              <h4>知识花园</h4>
-              <p>持续整理长期主义的知识库，欢迎来博客一起探索这些灵光一现的灵感。</p>
-              <a class="link" href="blog/index.html">走进博客 →</a>
+              <h4>正在寻求</h4>
+              <p>希望加入/共建一支追求突破的元宇宙或 Web3 体验团队，帮助产品在首月就建立令人信任的沉浸感。</p>
+              <a class="link" href="#contact">预约 30 分钟对话 →</a>
             </article>
           </div>
+        </div>
+      </section>
+
+      <section class="section" id="experience">
+        <div class="section-header">
+          <div>
+            <span class="eyebrow">Experience</span>
+            <h2>端到端产品与团队经历</h2>
+          </div>
+          <p class="section-intro">负责过从 0→1 策略设定到 1→N 规模化的完整链路，擅长在复杂多方团队中统一语言、建立仪式、追踪指标，并在快节奏迭代中守护体验质量。</p>
+        </div>
+        <div class="experience-timeline">
+          <article class="experience-item">
+            <header>
+              <h3>高级体验设计师 · 星河互动（Metaverse Studio）</h3>
+              <div class="experience-meta">
+                <span>2021.06 – 至今</span>
+                <span>深圳 · 远程协作</span>
+              </div>
+            </header>
+            <p class="experience-summary">带领 10 人跨职能小组打造「Nebula City」沉浸式社交平台，负责体验策略、信息架构、动效系统与 WebGL 前端交付。</p>
+            <ul class="experience-points">
+              <li>上线 9 个月用户转化率提升 42%，留存提升 18%，通过数据驱动的旅程拆解与 A/B 验证实现。</li>
+              <li>构建组件化设计系统，缩短 60% 设计与开发交付时间，支持 Web、AR 眼镜与 CAVE 三端一致体验。</li>
+              <li>推动无障碍体验规范，完成 36 项细节优化，使平台通过 WCAG 2.1 AA 关键指标。</li>
+            </ul>
+            <div class="experience-tags">
+              <span class="tag">团队管理</span>
+              <span class="tag">XR 体验</span>
+              <span class="tag">数据驱动</span>
+            </div>
+          </article>
+          <article class="experience-item">
+            <header>
+              <h3>首席前端工程师 · NovaXR</h3>
+              <div class="experience-meta">
+                <span>2018.03 – 2021.05</span>
+                <span>上海</span>
+              </div>
+            </header>
+            <p class="experience-summary">负责虚拟演唱会平台的前端架构、实时互动以及舞台视听编排系统，并协同策划沉浸式叙事。</p>
+            <ul class="experience-points">
+              <li>主导 WebGL / WebGPU 渲染与音视频同步策略，平均渲染延迟低于 28ms。</li>
+              <li>设计跨地区发布流水线，实现一键打包 5 套舞台主题，部署效率提升 3 倍。</li>
+              <li>与市场团队共创粉丝互动玩法，单场活动创下 120 万人在线的成绩。</li>
+            </ul>
+            <div class="experience-tags">
+              <span class="tag">WebGL</span>
+              <span class="tag">实时交互</span>
+              <span class="tag">设计系统</span>
+            </div>
+          </article>
+          <article class="experience-item">
+            <header>
+              <h3>创意技术顾问 · 自由职业</h3>
+              <div class="experience-meta">
+                <span>2015.08 – 2018.02</span>
+                <span>远程</span>
+              </div>
+            </header>
+            <p class="experience-summary">为艺术展览、教育机构与新创提供交互装置、数据可视化与在线课程平台的体验与前端实现。</p>
+            <ul class="experience-points">
+              <li>交付 20+ 套交互体验，涵盖装置艺术、教育与公益场景，平均交付周期 6 周。</li>
+              <li>搭建模组化代码库，帮助客户在后续 2 年内复用与扩展，减少 50% 维护成本。</li>
+              <li>策划并主持 12 场创意技术工作坊，培养 300+ 名创作者掌握沉浸式叙事工具。</li>
+            </ul>
+            <div class="experience-tags">
+              <span class="tag">Creative Coding</span>
+              <span class="tag">教育赋能</span>
+              <span class="tag">快速交付</span>
+            </div>
+          </article>
+        </div>
+      </section>
+
+      <section class="section bright" id="skills">
+        <div class="section-header">
+          <div>
+            <span class="eyebrow">Expertise</span>
+            <h2>让愿景快速落地的技能矩阵</h2>
+          </div>
+          <p class="section-intro">覆盖策略、设计、工程与运营的全链路能力，帮助团队在不同阶段选择正确的节奏与工具。</p>
+        </div>
+        <div class="skills-grid">
+          <article class="skills-card">
+            <h3>体验策略 &amp; 产品洞察</h3>
+            <ul>
+              <li>沉浸式叙事地图、角色旅程与服务蓝图</li>
+              <li>OKR / KPI 绑定的体验指标体系</li>
+              <li>双轨制探索与交付流程、设计冲刺主持</li>
+            </ul>
+          </article>
+          <article class="skills-card">
+            <h3>前端工程 &amp; 可视化</h3>
+            <ul>
+              <li>TypeScript、React、Vite、Next.js、SvelteKit</li>
+              <li>WebGL / Three.js / WebGPU、Shader 编程</li>
+              <li>实时协作、音视频同步、性能优化</li>
+            </ul>
+          </article>
+          <article class="skills-card">
+            <h3>设计系统 &amp; 无障碍</h3>
+            <ul>
+              <li>Design Token、设计工程化、组件规范</li>
+              <li>WCAG 2.1 AA、色彩对比、键盘导航</li>
+              <li>跨端体验一致性审核与 QA 手册</li>
+            </ul>
+          </article>
+          <article class="skills-card">
+            <h3>组织赋能 &amp; 协同</h3>
+            <ul>
+              <li>跨团队沟通仪式、共创工作坊</li>
+              <li>知识库搭建、设计评审与导师制度</li>
+              <li>跨文化团队沟通（中 / 英 / 日）</li>
+            </ul>
+          </article>
         </div>
       </section>
 
       <section class="section" id="projects">
         <div class="section-header">
           <div>
-            <span class="eyebrow">Selected Works</span>
-            <h2>作品一角</h2>
+            <span class="eyebrow">Signature Projects</span>
+            <h2>实战项目精选</h2>
           </div>
-          <p class="section-intro">这里收录了近年我最享受的探索：从生命游戏到远距协作的体验原型，每一件都藏着不同的实验与故事。</p>
+          <p class="section-intro">涵盖元宇宙场景、数字孪生与协作工具，从战略、体验设计到前端工程全链路交付，带来真实的业务与用户增长。</p>
         </div>
         <div class="grid cards" id="project-list"></div>
         <noscript>
@@ -131,10 +249,10 @@
       <section class="section" id="writing">
         <div class="section-header">
           <div>
-            <span class="eyebrow">Writing &amp; Notes</span>
-            <h2>最近在写</h2>
+            <span class="eyebrow">Latest Highlights</span>
+            <h2>近期成绩单</h2>
           </div>
-          <p class="section-intro">记录开发心得、共创方法论与日常的光芒，把零散的灵感整理成可反复使用的知识。</p>
+          <p class="section-intro">通过行业论坛、公开分享与内部复盘不断输出方法论，也让潜在合作伙伴了解我如何思考与实践。</p>
         </div>
         <div class="timeline" id="timeline-list"></div>
         <noscript>
@@ -146,18 +264,19 @@
         <div class="section-header">
           <div>
             <span class="eyebrow">Stay in Touch</span>
-            <h2>保持联系</h2>
+            <h2>让我们一起加速下一次发布</h2>
           </div>
-          <p class="section-intro">欢迎交流前端技术、设计灵感或任何能让生活更有趣的议题。</p>
+          <p class="section-intro">我期待与正在打造沉浸式体验、Web3 产品或创新协作工具的团队合作。30 分钟即可明确需求、路线与下一步行动。</p>
         </div>
         <div class="contact-card">
           <div>
             <h3>一起把想法做成体验</h3>
-            <p>如果你对我的项目感兴趣，或想聊聊新的合作机会，欢迎给我写信或在社交平台上找到我。</p>
+            <p>发封邮件或 LinkedIn 信息，我会在 24 小时内回复。若你在寻找短期冲刺或长期团队伙伴，都欢迎交流。</p>
           </div>
           <div class="social-links">
+            <a href="mailto:hello@miuchan.studio">Email</a>
+            <a href="https://www.linkedin.com/in/miuchan" target="_blank" rel="noopener">LinkedIn</a>
             <a href="https://github.com/miuchan" target="_blank" rel="noopener">GitHub</a>
-            <a href="blog/index.html">博客</a>
             <a href="resume/index.html">简历</a>
           </div>
         </div>
