--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Miuchan · 数字花园</title>
-  <meta name="description" content="康嘉琦（Miuchan）的个人主页，收录了博客、项目演示与在线简历。">
+  <title>Miuchan · 知识导航</title>
+  <meta name="description" content="完全重构的 Miuchan 知识导航站，汇集沉浸式体验的价值地图、方法论与案例库，让知识获取以最便利的方式呈现。">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
@@ -14,249 +14,280 @@
   <a class="skip-link" href="#main-content">跳到主要内容</a>
   <div class="wrapper">
     <nav class="site-nav">
-      <a href="#top" class="logo">miuchan.github.io</a>
+      <a href="#overview" class="logo">miuchan · knowledge hub</a>
       <div class="nav-links">
-        <a href="#about">价值主张</a>
-        <a href="#experience">经历</a>
-        <a href="#skills">专长</a>
-        <a href="#projects">作品</a>
-        <a href="#writing">亮点</a>
+        <a href="#overview">概览</a>
+        <a href="#knowledge">知识地图</a>
+        <a href="#playbook">方法手册</a>
+        <a href="#experience">实践案例</a>
+        <a href="#library">资源库</a>
+        <a href="#updates">动态</a>
         <a href="#contact">联系</a>
       </div>
     </nav>
 
     <main id="main-content">
-      <section class="hero" id="top" aria-labelledby="hero-title">
+      <section class="hero knowledge-hero" id="overview" aria-labelledby="hero-title">
         <div class="hero-content">
-          <span class="eyebrow">Metaverse Experience Architect · 全栈前端设计</span>
-          <h1 id="hero-title">把下一代沉浸式世界的体验在此展开。</h1>
-          <p class="hero-lede">我是康嘉琦（Miuchan）。我将系统化的产品策略、跨端前端工程与叙事驱动的体验设计结合在一起，帮助团队在 0→1 到 1→N 的阶段稳定交付。现在正在寻找能够共建元宇宙与下一代互联网体验的合作机会。</p>
+          <span class="eyebrow">Knowledge Hub</span>
+          <h1 id="hero-title">完全重构，让知识获取以最便利的方式呈现。</h1>
+          <p class="hero-lede">我是康嘉琦（Miuchan），沉浸式体验与跨端前端的实践者。这版主页以“知识导航”为核心，让产品策略、体验方法与工程经验以模块化的方式呈现，帮助你在几分钟内捕捉与合作相关的信息。</p>
           <ul class="hero-highlights" role="list">
             <li>
-              <span class="highlight-label">即刻可用</span>
-              <span class="highlight-value">深圳 / 远程混合 · 可赴海外项目</span>
+              <span class="highlight-label">浏览路径</span>
+              <span class="highlight-value">3 步了解价值 → 方法 → 资源</span>
             </li>
             <li>
-              <span class="highlight-label">核心优势</span>
-              <span class="highlight-value">XR 叙事体验 · 低延迟前端 · 多模态协作</span>
+              <span class="highlight-label">覆盖场景</span>
+              <span class="highlight-value">XR / Web3 / 多模态协作</span>
             </li>
             <li>
-              <span class="highlight-label">正在寻找</span>
-              <span class="highlight-value">Web3 / 元宇宙体验团队</span>
+              <span class="highlight-label">实践成果</span>
+              <span class="highlight-value">14 次端到端发布 · 6 个沉浸式项目</span>
             </li>
           </ul>
           <div class="hero-actions">
-            <a class="button primary" href="mailto:hello@miuchan.studio?subject=%E6%B1%82%E8%81%98%E5%90%88%E4%BD%9C%E5%9F%BA%E4%BA%8E%E7%BD%91%E9%A1%B5%E7%BB%8F%E9%AA%8C">预约面谈</a>
-            <a class="button secondary" href="resume/index.html">查看完整简历</a>
-            <a class="button ghost" href="#projects">浏览项目</a>
+            <a class="button primary" href="#knowledge">先看知识地图</a>
+            <a class="button secondary" href="resume/index.html">深入履历</a>
+            <a class="button ghost" href="#library">浏览资源库</a>
           </div>
-          <dl class="hero-stats">
-            <div class="hero-stat">
-              <dt>端到端体验发布</dt>
-              <dd>14 次</dd>
-            </div>
-            <div class="hero-stat">
-              <dt>XR / 3D 沉浸式项目</dt>
-              <dd>6 个</dd>
-            </div>
+        </div>
+        <aside class="hero-quick-nav" aria-label="快速入口">
+          <h2>3 步掌握重点</h2>
+          <ol class="step-list quick-step-list">
+            <li>
+              <strong>01 · 对齐价值</strong>
+              <p><a href="#knowledge">知识地图</a>整理沉浸式体验的价值栈，帮助团队快速定位我能解决的关键问题。</p>
+            </li>
+            <li>
+              <strong>02 · 选择方法</strong>
+              <p><a href="#playbook">方法手册</a>提供策略、工程与协作的可复用模板，可直接映射到当前项目。</p>
+            </li>
+            <li>
+              <strong>03 · 对照实践</strong>
+              <p><a href="#experience">实践案例</a>呈现指标、团队节奏与交付路径，让你一眼判断适配度。</p>
+            </li>
+          </ol>
+          <dl class="hero-stat-block">
             <div class="hero-stat">
               <dt>跨职能团队规模</dt>
               <dd>8 – 12 人</dd>
             </div>
+            <div class="hero-stat">
+              <dt>合作方式</dt>
+              <dd>远程 / 混合 · 可赴海外</dd>
+            </div>
           </dl>
-        </div>
-        <div class="hero-visual" aria-hidden="true">
-          <div class="orbit"></div>
-          <div class="sun"></div>
-          <div class="sparkles">
-            <span></span>
-            <span></span>
-            <span></span>
-          </div>
-        </div>
+        </aside>
       </section>
 
-      <section class="section bright" id="about">
+      <section class="section bright knowledge-section" id="knowledge">
         <div class="section-header">
           <div>
-            <span class="eyebrow">Value Proposition</span>
-            <h2>用产品思维把元宇宙的故事落成可交付体验</h2>
+            <span class="eyebrow">Knowledge Map</span>
+            <h2>沉浸式体验的价值地图</h2>
           </div>
-          <p class="section-intro">我擅长把抽象的愿景拆解成可信赖的路线图：梳理业务目标、建立跨学科共识、设计沉浸式叙事，再用高性能的工程方案快速迭代。目标是在最短时间帮助团队找到产品市场契合与用户共鸣。</p>
+          <p class="section-intro">知识地图聚焦三个维度：业务价值、体验叙事与工程实现。每个模块都附带关键指标与可复用的协作节奏，让你在短时间内了解我如何帮助团队完成 0→1 与 1→N 的跨越。</p>
         </div>
-        <div class="about-grid">
-          <article class="story-card">
-            <h3>从概念验证到规模化上线的全链路负责人</h3>
-            <p>我在 XR 产品、数字孪生城市与跨平台协作工具中担任过体验负责人，主导需求分析、叙事设计、动效系统、可视化与前端架构。</p>
-            <p>通过连续的双轨制迭代、指标驱动的体验优化与无障碍设计基线，帮助团队将创意快速转化为稳定上线的产品。</p>
-          </article>
-          <div class="mini-cards">
-            <article class="mini-card">
-              <h4>领导力与协作</h4>
-              <ul>
-                <li>建立跨职能的决策剧本与同步节奏</li>
-                <li>定义 KPI / OKR，将体验指标绑定业务结果</li>
-                <li>推动设计系统落地，保障多端一致性</li>
-              </ul>
-            </article>
-            <article class="mini-card">
-              <h4>方法论工具箱</h4>
-              <ul>
-                <li>沉浸式叙事地图与多维角色旅程</li>
-                <li>WebGL / Three.js / Unity WebGPU 混合栈</li>
-                <li>设计运营：设计冲刺、设计评审、知识库</li>
-              </ul>
-            </article>
-            <article class="mini-card highlight">
-              <h4>正在寻求</h4>
-              <p>希望加入/共建一支追求突破的元宇宙或 Web3 体验团队，帮助产品在首月就建立令人信任的沉浸感。</p>
-              <a class="link" href="#contact">预约 30 分钟对话 →</a>
-            </article>
-          </div>
-        </div>
-      </section>
-
-      <section class="section" id="experience">
-        <div class="section-header">
-          <div>
-            <span class="eyebrow">Experience</span>
-            <h2>端到端产品与团队经历</h2>
-          </div>
-          <p class="section-intro">负责过从 0→1 策略设定到 1→N 规模化的完整链路，擅长在复杂多方团队中统一语言、建立仪式、追踪指标，并在快节奏迭代中守护体验质量。</p>
-        </div>
-        <div class="experience-timeline">
-          <article class="experience-item">
-            <header>
-              <h3>高级体验设计师 · 星河互动（Metaverse Studio）</h3>
-              <div class="experience-meta">
-                <span>2021.06 – 至今</span>
-                <span>深圳 · 远程协作</span>
-              </div>
-            </header>
-            <p class="experience-summary">带领 10 人跨职能小组打造「Nebula City」沉浸式社交平台，负责体验策略、信息架构、动效系统与 WebGL 前端交付。</p>
-            <ul class="experience-points">
-              <li>上线 9 个月用户转化率提升 42%，留存提升 18%，通过数据驱动的旅程拆解与 A/B 验证实现。</li>
-              <li>构建组件化设计系统，缩短 60% 设计与开发交付时间，支持 Web、AR 眼镜与 CAVE 三端一致体验。</li>
-              <li>推动无障碍体验规范，完成 36 项细节优化，使平台通过 WCAG 2.1 AA 关键指标。</li>
+        <div class="knowledge-layout">
+          <article class="knowledge-column">
+            <h3>价值主张</h3>
+            <p>将抽象的沉浸式愿景拆解成可信赖的路线图：从愿景对齐、指标体系到上线监控，确保体验与业务指标绑定。</p>
+            <ul class="knowledge-list">
+              <li>构建以成果为导向的体验指标体系。</li>
+              <li>沉浸式叙事 + 数据反馈的闭环验证。</li>
+              <li>双轨制迭代，兼顾探索与交付。</li>
             </ul>
-            <div class="experience-tags">
-              <span class="tag">团队管理</span>
-              <span class="tag">XR 体验</span>
-              <span class="tag">数据驱动</span>
-            </div>
           </article>
-          <article class="experience-item">
-            <header>
-              <h3>首席前端工程师 · NovaXR</h3>
-              <div class="experience-meta">
-                <span>2018.03 – 2021.05</span>
-                <span>上海</span>
-              </div>
-            </header>
-            <p class="experience-summary">负责虚拟演唱会平台的前端架构、实时互动以及舞台视听编排系统，并协同策划沉浸式叙事。</p>
-            <ul class="experience-points">
-              <li>主导 WebGL / WebGPU 渲染与音视频同步策略，平均渲染延迟低于 28ms。</li>
-              <li>设计跨地区发布流水线，实现一键打包 5 套舞台主题，部署效率提升 3 倍。</li>
-              <li>与市场团队共创粉丝互动玩法，单场活动创下 120 万人在线的成绩。</li>
+          <article class="knowledge-column">
+            <h3>叙事与体验结构</h3>
+            <p>通过角色旅程、场景脚本与动效系统，让体验在不同设备上保持一致，同时保留叙事张力。</p>
+            <ul class="knowledge-list">
+              <li>沉浸式叙事地图与多维角色旅程。</li>
+              <li>体验动效系统 + 可视化语言规范。</li>
+              <li>无障碍设计基线，覆盖键盘 / 读屏。</li>
             </ul>
-            <div class="experience-tags">
-              <span class="tag">WebGL</span>
-              <span class="tag">实时交互</span>
-              <span class="tag">设计系统</span>
-            </div>
           </article>
-          <article class="experience-item">
-            <header>
-              <h3>创意技术顾问 · 自由职业</h3>
-              <div class="experience-meta">
-                <span>2015.08 – 2018.02</span>
-                <span>远程</span>
-              </div>
-            </header>
-            <p class="experience-summary">为艺术展览、教育机构与新创提供交互装置、数据可视化与在线课程平台的体验与前端实现。</p>
-            <ul class="experience-points">
-              <li>交付 20+ 套交互体验，涵盖装置艺术、教育与公益场景，平均交付周期 6 周。</li>
-              <li>搭建模组化代码库，帮助客户在后续 2 年内复用与扩展，减少 50% 维护成本。</li>
-              <li>策划并主持 12 场创意技术工作坊，培养 300+ 名创作者掌握沉浸式叙事工具。</li>
+          <article class="knowledge-column">
+            <h3>工程与交付</h3>
+            <p>把策略与体验落在工程管线里：TypeScript + WebGL/WebGPU 混合栈、实时协作、性能调优与发布流程。</p>
+            <ul class="knowledge-list">
+              <li>端到端工程方案，从原型到上线。</li>
+              <li>性能指标（< 28ms 延迟）与监控仪表板。</li>
+              <li>跨端发布流水线与设计系统联动。</li>
             </ul>
-            <div class="experience-tags">
-              <span class="tag">Creative Coding</span>
-              <span class="tag">教育赋能</span>
-              <span class="tag">快速交付</span>
-            </div>
           </article>
         </div>
       </section>
 
-      <section class="section bright" id="skills">
+      <section class="section" id="playbook">
         <div class="section-header">
           <div>
-            <span class="eyebrow">Expertise</span>
-            <h2>让愿景快速落地的技能矩阵</h2>
+            <span class="eyebrow">Playbook</span>
+            <h2>可直接复用的方法手册</h2>
           </div>
-          <p class="section-intro">覆盖策略、设计、工程与运营的全链路能力，帮助团队在不同阶段选择正确的节奏与工具。</p>
+          <p class="section-intro">当你需要在短时间内引入沉浸式体验或强化跨端协作，可以从以下模块开始。每个模块都附带具体的会议节奏与交付物模板。</p>
         </div>
-        <div class="skills-grid">
-          <article class="skills-card">
+        <div class="playbook-grid">
+          <article class="playbook-card">
             <h3>体验策略 &amp; 产品洞察</h3>
             <ul>
-              <li>沉浸式叙事地图、角色旅程与服务蓝图</li>
-              <li>OKR / KPI 绑定的体验指标体系</li>
-              <li>双轨制探索与交付流程、设计冲刺主持</li>
+              <li>沉浸式叙事地图、角色旅程与服务蓝图。</li>
+              <li>OKR / KPI 绑定的体验指标体系。</li>
+              <li>双轨制探索与交付流程、设计冲刺主持。</li>
             </ul>
           </article>
-          <article class="skills-card">
+          <article class="playbook-card">
             <h3>前端工程 &amp; 可视化</h3>
             <ul>
-              <li>TypeScript、React、Vite、Next.js、SvelteKit</li>
-              <li>WebGL / Three.js / WebGPU、Shader 编程</li>
-              <li>实时协作、音视频同步、性能优化</li>
+              <li>TypeScript、React、Vite、Next.js、SvelteKit。</li>
+              <li>WebGL / Three.js / WebGPU、Shader 编程。</li>
+              <li>实时协作、音视频同步与性能优化策略。</li>
             </ul>
           </article>
-          <article class="skills-card">
+          <article class="playbook-card">
             <h3>设计系统 &amp; 无障碍</h3>
             <ul>
-              <li>Design Token、设计工程化、组件规范</li>
-              <li>WCAG 2.1 AA、色彩对比、键盘导航</li>
-              <li>跨端体验一致性审核与 QA 手册</li>
+              <li>Design Token、设计工程化、组件规范。</li>
+              <li>WCAG 2.1 AA、色彩对比、键盘导航。</li>
+              <li>跨端体验一致性审核与 QA 手册。</li>
             </ul>
           </article>
-          <article class="skills-card">
+          <article class="playbook-card">
             <h3>组织赋能 &amp; 协同</h3>
             <ul>
-              <li>跨团队沟通仪式、共创工作坊</li>
-              <li>知识库搭建、设计评审与导师制度</li>
-              <li>跨文化团队沟通（中 / 英 / 日）</li>
+              <li>跨团队沟通仪式、共创工作坊模板。</li>
+              <li>知识库搭建、设计评审与导师制度。</li>
+              <li>跨文化团队沟通（中 / 英 / 日）。</li>
             </ul>
           </article>
         </div>
       </section>
 
-      <section class="section" id="projects">
+      <section class="section bright" id="experience">
         <div class="section-header">
           <div>
-            <span class="eyebrow">Signature Projects</span>
-            <h2>实战项目精选</h2>
+            <span class="eyebrow">Casebook</span>
+            <h2>实践案例与可复用的知识拆解</h2>
           </div>
-          <p class="section-intro">涵盖元宇宙场景、数字孪生与协作工具，从战略、体验设计到前端工程全链路交付，带来真实的业务与用户增长。</p>
+          <p class="section-intro">每个案例都按照“场景 → 关键动作 → 可复用资产”的逻辑呈现，便于你快速判断是否适合自己的团队。</p>
         </div>
-        <div class="grid cards" id="project-list"></div>
+        <div class="casebook">
+          <article class="case-card">
+            <header>
+              <h3>Nebula City · 沉浸式社交平台</h3>
+              <p class="case-meta">体验负责人 · 10 人跨职能小组 · 2021-至今</p>
+            </header>
+            <dl class="case-details">
+              <div>
+                <dt>场景</dt>
+                <dd>构建跨端（Web / AR 眼镜 / CAVE）的沉浸式社交体验。</dd>
+              </div>
+              <div>
+                <dt>关键动作</dt>
+                <dd>制定体验指标体系与旅程拆解，叠加 A/B 验证和无障碍规范。</dd>
+              </div>
+              <div>
+                <dt>指标结果</dt>
+                <dd>9 个月内转化率 +42%，留存 +18%，通过 WCAG 2.1 AA 关键指标。</dd>
+              </div>
+              <div>
+                <dt>可复用资产</dt>
+                <dd>组件化设计系统、跨端动效库、上线监控仪表板。</dd>
+              </div>
+            </dl>
+            <ul class="tag-list">
+              <li>XR 叙事</li>
+              <li>设计系统</li>
+              <li>数据驱动</li>
+            </ul>
+          </article>
+          <article class="case-card">
+            <header>
+              <h3>Horizon Arena · 虚拟演唱会</h3>
+              <p class="case-meta">首席前端工程师 · 2018-2021</p>
+            </header>
+            <dl class="case-details">
+              <div>
+                <dt>场景</dt>
+                <dd>实时舞台编排、粉丝互动与全球并发发布。</dd>
+              </div>
+              <div>
+                <dt>关键动作</dt>
+                <dd>主导 WebGL/WebGPU 架构与音视频同步策略，搭建跨地区发布流水线。</dd>
+              </div>
+              <div>
+                <dt>指标结果</dt>
+                <dd>渲染延迟控制在 28ms 内，单场在线突破 120 万。</dd>
+              </div>
+              <div>
+                <dt>可复用资产</dt>
+                <dd>舞台主题打包管线、实时互动脚本与测试脚本库。</dd>
+              </div>
+            </dl>
+            <ul class="tag-list">
+              <li>WebGL</li>
+              <li>实时协作</li>
+              <li>发布自动化</li>
+            </ul>
+          </article>
+          <article class="case-card">
+            <header>
+              <h3>创意技术顾问 · 自由职业</h3>
+              <p class="case-meta">交互装置 / 教育平台 · 2015-2018</p>
+            </header>
+            <dl class="case-details">
+              <div>
+                <dt>场景</dt>
+                <dd>交付 20+ 套交互体验，涵盖装置艺术、教育与公益。</dd>
+              </div>
+              <div>
+                <dt>关键动作</dt>
+                <dd>搭建模块化代码库、策划创意技术工作坊并提供维护手册。</dd>
+              </div>
+              <div>
+                <dt>指标结果</dt>
+                <dd>平均交付周期 6 周，客户维护成本下降 50%，培养 300+ 名创作者。</dd>
+              </div>
+              <div>
+                <dt>可复用资产</dt>
+                <dd>教学脚本、可扩展组件库、运营与维护指南。</dd>
+              </div>
+            </dl>
+            <ul class="tag-list">
+              <li>Creative Coding</li>
+              <li>教育赋能</li>
+              <li>快速交付</li>
+            </ul>
+          </article>
+        </div>
+      </section>
+
+      <section class="section" id="library">
+        <div class="section-header">
+          <div>
+            <span class="eyebrow">Resource Library</span>
+            <h2>知识化的项目与文档资源</h2>
+          </div>
+          <p class="section-intro">下列资源将方法论与产品成果转化为可浏览的 Demo、仪表板或文档，方便你直接验证适配度。</p>
+        </div>
+        <div class="grid cards" id="resource-list"></div>
         <noscript>
-          <p class="noscript-message">请启用 JavaScript 以浏览完整的项目列表。</p>
+          <p class="noscript-message">请启用 JavaScript 以浏览完整的资源列表。</p>
         </noscript>
       </section>
 
-      <section class="section" id="writing">
+      <section class="section" id="updates">
         <div class="section-header">
           <div>
-            <span class="eyebrow">Latest Highlights</span>
-            <h2>近期成绩单</h2>
+            <span class="eyebrow">Latest Updates</span>
+            <h2>最新输出与公开分享</h2>
           </div>
-          <p class="section-intro">通过行业论坛、公开分享与内部复盘不断输出方法论，也让潜在合作伙伴了解我如何思考与实践。</p>
+          <p class="section-intro">从行业论坛到内部复盘，我持续输出沉浸式体验的实践笔记。这里是最新的知识节点与里程碑。</p>
         </div>
-        <div class="timeline" id="timeline-list"></div>
+        <div class="timeline" id="update-list"></div>
         <noscript>
-          <p class="noscript-message">请启用 JavaScript 以查看最近写作的完整时间线。</p>
+          <p class="noscript-message">请启用 JavaScript 以查看最近动态的完整时间线。</p>
         </noscript>
       </section>
 
@@ -264,14 +295,14 @@
         <div class="section-header">
           <div>
             <span class="eyebrow">Stay in Touch</span>
-            <h2>让我们一起加速下一次发布</h2>
+            <h2>发起一次关于下一次发布的对话</h2>
           </div>
-          <p class="section-intro">我期待与正在打造沉浸式体验、Web3 产品或创新协作工具的团队合作。30 分钟即可明确需求、路线与下一步行动。</p>
+          <p class="section-intro">如果你正在构建沉浸式体验、Web3 产品或创新协作工具，欢迎通过邮件或 LinkedIn 联系，我会在 24 小时内回复。</p>
         </div>
         <div class="contact-card">
           <div>
-            <h3>一起把想法做成体验</h3>
-            <p>发封邮件或 LinkedIn 信息，我会在 24 小时内回复。若你在寻找短期冲刺或长期团队伙伴，都欢迎交流。</p>
+            <h3>把知识转换成具体行动</h3>
+            <p>带上你的目标、团队节奏或当前瓶颈，我们可以在 30 分钟内完成需求梳理与下一步建议。</p>
           </div>
           <div class="social-links">
             <a href="mailto:hello@miuchan.studio">Email</a>
