Add fixed-point search for gradient descent demo

--- a/demo/miu-tiantian-gradient-descent/index.html
+++ b/demo/miu-tiantian-gradient-descent/index.html
@@ -64,7 +64,12 @@
           <button id="run">开始下降</button>
           <button id="step" class="secondary">单步迭代</button>
           <button id="reset" class="secondary">重新随机</button>
+          <button id="scan-fixed-point" class="secondary">搜索不动点</button>
         </div>
+        <section class="fixed-point" aria-live="polite">
+          <h3>不动点探索</h3>
+          <p id="fixed-point-status">点击“搜索不动点”，扫描学习率、动量与协同噪声之间的平衡组合。</p>
+        </section>
         <dl class="legend" aria-label="图例">
           <div>
             <dt>粉色</dt>
