--- a/demo/miu-tiantian-gradient-descent/index.html
+++ b/demo/miu-tiantian-gradient-descent/index.html
@@ -69,6 +69,7 @@
         <section class="fixed-point" aria-live="polite">
           <h3>不动点探索</h3>
           <p id="fixed-point-status">点击“搜索不动点”，扫描学习率、动量与协同噪声之间的平衡组合。</p>
+          <p id="fixed-point-max-status">最大不动点尚未计算。</p>
         </section>
         <dl class="legend" aria-label="图例">
           <div>
