Refactor resource rendering with functional pipeline

--- a/index.html
+++ b/index.html
@@ -327,6 +327,7 @@
           </div>
           <p class="section-intro">以下资源覆盖策略对齐、体验系统、设计工程与增长运营，帮助你快速了解我的工作深度。</p>
         </div>
+        <div class="summary-grid" id="resource-summary" aria-live="polite"></div>
         <div class="grid cards" id="resource-list"></div>
         <noscript>
           <p class="noscript-message">请启用 JavaScript 以浏览完整的资源列表。</p>
@@ -341,6 +342,7 @@
           </div>
           <p class="section-intro">持续记录产品实践的迭代，涵盖公开演讲、文章与内部复盘，帮助你洞悉我的思考方式。</p>
         </div>
+        <div class="summary-grid" id="insight-summary" aria-live="polite"></div>
         <div class="timeline" id="insight-list"></div>
         <noscript>
           <p class="noscript-message">请启用 JavaScript 以查看完整的时间线。</p>
